<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:padding="20dp">

    <TextView
        android:id="@+id/valid_phone_num_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/layout_validsoft_label1" />

    <TextView
        android:id="@+id/valid_phone_sim_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/valid_phone_num_l"
        android:layout_below="@id/valid_phone_num_l"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:visibility="gone"
        android:text="@string/layout_validsoft_label2" />

    <EditText
        android:id="@+id/valid_phone_num_e"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"  
        android:layout_alignBaseline="@id/valid_phone_num_l"
        android:layout_marginLeft="5dp"
        android:padding="5dp"
        android:textColorHint="#AAAAAA"  
        android:textSize="16sp"
        android:singleLine="true"  
    	android:hint="@string/layout_validsoft_label3"  
        android:layout_toRightOf="@id/valid_phone_num_l"
        android:inputType="number" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/valid_phone_sim_e"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:background="@drawable/bg_edittext"  
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:textSize="16sp"
        android:textColorHint="#AAAAAA"  
        android:singleLine="true"  
        android:visibility="gone"
        android:layout_alignBaseline="@id/valid_phone_sim_l"
        android:layout_alignLeft="@id/valid_phone_num_e"
        android:hint="@string/layout_validsoft_label4"  
        android:inputType="none" />


   
        <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/valid_phone_sim_l"
        android:layout_below="@+id/valid_phone_sim_l"
        android:layout_marginTop="20dp"
        android:text="" />

</RelativeLayout>